# PixieEngine

./: .gitignore  .gitmodules  Build.lua  CMakeLists.txt  README.md
Dependencies/freetype/: CMakeLists.txt
PixieEngineApp/: Build-App.lua  PixieEngineApp.h  UserInput.h  Vector.h  headers.h
PixieEngineApp/Source/: AssetsBrowserWindow.cpp  AssetsBrowserWindow.h  ComponentRenderer.cpp  ComponentRenderer.h  DefaultViewportWindow.cpp  (+63 more)
PixieEngineCore/: AssimpGLMHelper.h  AssimpGLMHelpers.cpp  BSDF.cpp  BSDF.h  BSDFSample.cpp  BSDFSample.h  Bounds.cpp  Bounds.h  Build-Core.lua  BxDF.cpp  BxDF.h  BxDFTools.h  CPURayTracer.cpp  CPURayTracer.h  Camera.cpp  Camera.h  CheckerTexture.cpp  CheckerTexture.h  ColorTexture.cpp  ColorTexture.h  Component.cpp  Component.h  DielectricMaterial.cpp  DielectricMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  DiffuseTransmissionMaterial.cpp  DiffuseTransmissionMaterial.h  EngineCore.cpp  Film.cpp  Film.h  Frame.cpp  Frame.h  FrameBuffer.cpp  FrameBuffer.h  ImageTexture.cpp  ImageTexture.h  Light.cpp  Light.h  Material.cpp  (+54 more)
Scripts/: Setup-Linux.sh
dependencies/: CMakeLists.txt
dependencies/assimp/: CMakeLists.txt
dependencies/freetype/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
source/: CMakeLists.txt
source/demos/marching-cubes/: CMakeLists.txt  main.cpp
source/demos/render-api/: CMakeLists.txt  main.cpp
source/marching-cubes-demo/: CMakeLists.txt  main.cpp
source/pixie-engine-core/: CMakeLists.txt  EngineConfig.cpp  EngineConfig.h  EngineTime.cpp  Globals.cpp  PixieEngine.cpp  PixieEngine.h  PixieEngineCore.h  PixieEngineMainWindow.cpp  PixieEngineMainWindow.h  SceneManager.cpp  SceneManager.h  UserInput.cpp  UserInput.h  pch.h
source/pixie-engine-core/Animation/: MeshAnimator.cpp  MeshAnimator.h
source/pixie-engine-core/Debug/: Log.h  OpenGLCallbacks.h
source/pixie-engine-core/Math/: BezierCurves.cpp  BezierCurves.h  Bounds.cpp  Bounds.h  DirectionCone.cpp  DirectionCone.h  Frame.cpp  Frame.h  MathBase.h  PerlinNoise.cpp  PerlinNoise.h  Random.cpp  Random.h  Transform.cpp  Transform.h
source/pixie-engine-core/RayTracing/: MeshBVH.cpp  MeshBVH.h  Ray.h
source/pixie-engine-core/Rendering/: AntiAliasigUtils.h  AntiAliasingEnums.h  AntiAliasingUtils.cpp  DefferedRenderer.cpp  DefferedRenderer.h  ForwardRenderPipeline.cpp  ForwardRenderPipeline.h  ForwardRenderer.cpp  ForwardRenderer.h  FrameBuffer.cpp  FrameBuffer.h  LTC_Matrix.h  MeshHandle.cpp  MeshHandle.h  RenderAPI.h  RenderEngine.cpp  RenderEngine.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.h  RendererBase.h  SSAOKernel.h  SSBOHandle.h  ShaderHandle.h  TextureEnums.h  TextureHandle.h
source/pixie-engine-core/Rendering/OpenGL/: FrameBufferOpenGL.cpp  FrameBufferOpenGL.h  MeshOpenGL.h  OpenGLCallbacks.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderCompilationOpenGL.cpp  ShaderCompilationOpenGL.h  TextureOpenGL.h
source/pixie-engine-core/Rendering/Vulkan/: RendererVulkan.cpp  RendererVulkan.h  ShaderCompilationVulkan.cpp  ShaderCompilationVulkan.h
source/pixie-engine-core/Resources/: Atmosphere.cpp  Atmosphere.h  Buffer2DTexture.h  Cubemap.cpp  Cubemap.h  FontCharacter.h  FontLoader.cpp  FontLoader.h  MarchingCubes.cpp  MarchingCubes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  MeshHandle.cpp  MeshHandle.h  ModelLoader.cpp  ModelLoader.h  MultisampleTexture.cpp  MultisampleTexture.h  ResourceManager.cpp  ResourceManager.h  SSBOHandle.h  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TextureGenerator.cpp  TextureGenerator.h  TextureLoader.cpp  TextureLoader.h  TextureUtils.h  Vertex.cpp  Vertex.h
source/pixie-engine-core/Scene/: Camera.cpp  Camera.h  FreeCameraController.cpp  FreeCameraController.h  OrbitalCameraController.cpp  OrbitalCameraController.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  Skybox.cpp  Skybox.h
source/pixie-engine-core/Scene/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  Components.h  DiffuseAreaLightComponent.cpp  DiffuseAreaLightComponent.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshAnimatorComponent.cpp  MeshAnimatorComponent.h  MeshComponent.cpp  MeshComponent.h  PointLightComponent.cpp  PointLightComponent.h  SphereComponent.cpp  SphereComponent.h
source/pixie-engine-core/Time/: EngineTime.cpp  EngineTime.h  GlobalTimer.cpp  GlobalTimer.h  TimeMeasurement.h  Timer.cpp  Timer.h
source/pixie-engine-core/UserInput/: UserInput.cpp  UserInput.h
source/pixie-engine-core/Utils/: Buffer2D.h  DynamicTypelessBuffer.h  FileReader.cpp  FileReader.h  StringUtils.cpp  StringUtils.h  TypelessBuffer.h
source/pixie-engine-core/Windowing/: Event.h  MainWindow.cpp  MainWindow.h  MainWindowOpenGL.cpp  MainWindowOpenGL.h  MainWindowVulkan.cpp  MainWindowVulkan.h
source/pixie-engine-editor/: CMakeLists.txt  PixieEngineEditor.cpp  PixieEngineEditor.h  PixieEngineWindow.cpp  PixieEngineWindow.h  SceneGenerator.cpp  SceneGenerator.h  ViewportCameraController.cpp  ViewportCameraController.h  main.cpp  pch.h
source/pixie-engine-editor/Interface/: ComponentRenderer.cpp  ComponentRenderer.h  Interface.cpp  Interface.h  MainWindowMenu.cpp  MainWindowMenu.h
source/pixie-engine-editor/Interface/Windows/: AssetsBrowserWindow.cpp  AssetsBrowserWindow.h  InspectorWindow.cpp  InspectorWindow.h  InterfaceWindow.cpp  InterfaceWindow.h  SceneTreeWindow.cpp  SceneTreeWindow.h  ShaderGraphWindow.cpp  ShaderGraphWindow.h  StatsWindow.cpp  StatsWindow.h  ViewportSettingsWindow.cpp  ViewportSettingsWindow.h  ViewportWindow.cpp  ViewportWindow.h
source/pixie-engine-editor/ShaderGraph/: ShaderGraph.h  ShaderNodeIO.h
source/pixie-engine-editor/ShaderGraph/Nodes/: DefferedLightingNode.cpp  DefferedLightingNode.h  DefferedRenderNode.cpp  WorldSpaceAmbientOcclusionNode.h
source/pixie-engine-ui/: CMakeLists.txt  DemoWindow.cpp  DemoWindow.h  UI.cpp  UI.h  UIWindow.h  pch.h
(+493 files in other folders)
